2000-04-08  Bruce Guenter  <bguenter@bguenter.pointsnorth.com>

	* fdibuf.cc (read_large): Fixed bug: count needed to be
	incremented after reading data in.

2000-04-07  Bruce Guenter  <bguenter@bguenter.pointsnorth.com>

	* fdobuf_signed.cc (operator<<): Immediately output a '-' for
	negative numbers rather than storing a negative flag for later.

	* fdobuf_unsigned.cc (operator<<): Moved the integer versions of
	this operator into their own modules.

	* fdobuf_seek.cc (seek): Moved this routine out of fdobuf.cc

	* fdibuf.cc (read_large): Added this routine to read in a chunk of
	data larger than the size of the buffer.

2000-04-06  Bruce Guenter  <bguenter@bguenter.pointsnorth.com>

	* fdibuf_netstring.cc (getnetstring): Moved this routine into its
	own source file.

	* fdobuf.cc (write_large): Added this routine to write out a chunk
	of data larger than the size of the buffer, to avoid doing extra
	copies.
	(write): Removed an extraneous code segment.

	* fdobuf.h: Moved the fdobuf declarations here.

	* fdibuf.h: Moved the fdibuf declarations here.

	* fdbuf.h: Removed extraneous fdobuf declaration.

1999-07-08  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf.cc (write): Optimized this routine better for the case
	where the amount of data to be written will fit inside the buffer.

1999-07-05  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdbuf.h (fdobuf,fdibuf): Made some of the routines here virtual
	in order to extend it properly.
	Added "tell()" operations to both fdibuf and fdobuf to indicate
	the current logical read/write point.

1999-07-04  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdobuf_chownmod.cc: Added two new routines chown and chmod,
	which operate directly on the open fd.

1999-06-30  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* fdibuf_mystring.cc (getline): Make this routine return the
	number of bytes actually read, including the delimiter, even
	though the delimiter is not added to the returned string.
